--- a/frontend/src/pages/Profil.scss
+++ b/frontend/src/pages/Profil.scss
@@ -46,6 +46,7 @@
     object-fit: cover;
     border-radius: 8px;
     filter: brightness(0.95);
+    border: 4px solid white;
   }
 
   &__banner-edit-btn {
