--- a/frontend/src/component/Header.scss
+++ b/frontend/src/component/Header.scss
@@ -40,6 +40,7 @@
 
         &:hover {
           background: $color-blue;
+          color: white;
           box-shadow: 0 0 10px $color-blue;
         }
       }
@@ -50,6 +51,7 @@
 
         &:hover {
           background: $color-green;
+          color: white;
           box-shadow: 0 0 10px $color-green;
         }
       }
