--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -41,19 +41,20 @@ body {
   background-position: center;
   background-size: contain;
   position: relative;
+  background-position: center;
   
-  &::before {
-    content: "";
-    z-index: -1;
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(245, 242, 242, 0.55);
-    border-radius: 1rem;
-    padding: 2.5rem 3rem;
-    box-shadow: 0 6px 24px rgba(0, 0, 0, 0.1);
-  }
+  // &::before {
+  //   content: "";
+  //   z-index: -1;
+  //   position: absolute;
+  //   inset: 0;
+  //   width: 100%;
+  //   height: 100vh;
+  //   background: rgba(245, 242, 242, 0.55);
+  //   border-radius: 1rem;
+  //   padding: 2.5rem 3rem;
+  //   box-shadow: 0 6px 24px rgba(0, 0, 0, 0.1);
+  // }
 }
 
 #root {
@@ -97,6 +98,7 @@ span {
 
 h1 {
   font-size: 3.5rem;
+  font-weight: 700;
 }
 
 h3 {
