--- a/frontend/src/component/LoadingScreen.scss
+++ b/frontend/src/component/LoadingScreen.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 0 25px 0;
+    background-color: white;
     height: 100vh;
   
     &__text {
