--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   padding: 4rem 2rem;
-  
+
   &__section {
     width: 100%;
     max-width: 900px;
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     // gap: 3rem;
-    // background: rgba(255, 255, 255, 0.95);
+    background: rgba(255, 255, 255, 0.75);
     border-radius: 1rem;
     padding: 2.5rem 3rem;
     box-shadow: 0 6px 24px rgba(0, 0, 0, 0.1);
@@ -25,8 +25,9 @@
     font-size: 4rem;
     font-weight: 800;
     text-align: center;
-    color: black;
+    color: #333;
     position: relative;
+    text-transform: uppercase;
 
     // &::after {
     //   content: "";
@@ -40,6 +41,8 @@
     //   border-radius: 3px;
     // }
   }
+
+
 
   &__list {
     &--primary-actions {
@@ -114,25 +117,13 @@
     }
   }
 
-  // Responsive pour titres XXL en desktop
   @include mobile-lg {
     &__title {
       font-size: 6rem;
       text-align: left;
-
-      &::after {
-        left: 0;
-        transform: none;
-      }
     }
-
     &__section {
       align-items: flex-start;
-    }
-
-    &__list--primary-actions {
-      justify-content: flex-start;
-      gap: 3rem;
     }
   }
 }
