--- a/frontend/src/pages/Page404.scss
+++ b/frontend/src/pages/Page404.scss
@@ -18,6 +18,7 @@
     border-radius: 1rem;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
     position: relative;
+    height: fit-content;
     
     &::before {
         position: absolute;
