adaptation selon elo classement

--- a/frontend/src/component/user/RankingUserPreview.scss
+++ b/frontend/src/component/user/RankingUserPreview.scss
@@ -74,7 +74,7 @@
   text-transform: capitalize;
 }
 
-.ranking-user-card__score {
+.ranking-user-card__elo, .ranking-user-card__score  {
   font-size: 1.1rem;
   font-weight: 500;
   color: #666;
