--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -38,8 +38,8 @@ $linear-gradient-red: linear-gradient(to right, #ff6a6a, #ff3d3d);
 $linear-gradient-red-hover: linear-gradient(to right, #ff3d3d, #ff6a6a);
 $shadow-red: rgba(255, 61, 61, 0.4);
 
-$linear-gradient-blue: linear-gradient(to right, #6a11cb, #2575fc);
-$linear-gradient-blue-hover: linear-gradient(to right, #2575fc, #6a11cb);
+$linear-gradient-blue: linear-gradient(to right, #00bcd4, #0077ff);
+$linear-gradient-blue-hover: linear-gradient(to right, #11d1ea, rgba(14, 14, 167, 0.467)ff);
 $shadow-blue: rgba(37, 117, 252, 0.4);
 
 $linear-gradient-green: linear-gradient(to right, #a8e063, #56ab2f);
