ajout position classement

--- a/frontend/src/pages/Profil.scss
+++ b/frontend/src/pages/Profil.scss
@@ -30,6 +30,7 @@
     color: #00bcd4;
     font-weight: 700;
     box-shadow: 0 0 12px #00bcd455;
+    width: fit-content;
   }
 
   &__banner-wrapper {
