--- a/frontend/src/component/Header.scss
+++ b/frontend/src/component/Header.scss
@@ -31,10 +31,10 @@
 
       &--ranking {
         @include button-base(
-        $linear-gradient-red,
-        $linear-gradient-red-hover,
-        $shadow-red
-      );
+          $linear-gradient-red,
+          $linear-gradient-red-hover,
+          $shadow-red
+        );
       }
 
       &--login {
@@ -51,8 +51,6 @@
           $shadow-green
         );
       }
-
-     
     }
 
     &__avatar {
@@ -77,7 +75,7 @@
       position: absolute;
       top: 110%;
       right: 0;
-      background: #FDFDFD;
+      background: #fdfdfd;
       border: 2px solid $color-red;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(63, 63, 63, 0.3);
