--- a/frontend/src/pages/HubAdmin.scss
+++ b/frontend/src/pages/HubAdmin.scss
@@ -4,54 +4,50 @@
 /***0px***/
 
 .hub {
+  padding: 2rem;
+
+  &__section {
+    max-width: 600px;
+    margin: 0 auto;
+    border-radius: 12px;
     padding: 2rem;
-    // min-height: 100vh;
-  
-    &__section {
-      max-width: 600px;
-      margin: 0 auto;
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-      text-align: center;
-      height: fit-content;
-      background-color: white;
-    }
-  
-    &__title {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-    }
-  
-    &__subtitle {
-      margin-bottom: 2rem;
-    }
-  
-    &__list {
-      list-style: none;
-      padding: 0;
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-  
-    &__item {
-      flex: 1 1 auto;
-    }
-  
-    &__button {
-      padding: 0.75rem 1.5rem;
-      background-color: #4a90e2;
-      border-radius: 8px;
-      transition: background-color 0.2s ease;
-  
-      &:hover {
-        background-color: #357abd;
-      }
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    text-align: center;
+    height: fit-content;
+    background-color: white;
+  }
+
+  &__title {
+    font-size: 2rem;
+    margin: 0 0 0.5rem 0;
+  }
+
+  &__subtitle {
+    margin-bottom: 0 0 2rem 0;
+  }
+
+  &__list {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &__item {
+    flex: 1 1 auto;
+  }
+
+  &__button {
+    padding: 0.75rem 1.5rem;
+    background-color: #4a90e2;
+    border-radius: 8px;
+    transition: background-color 0.2s ease;
+
+    &:hover {
+      background-color: #357abd;
     }
   }
-  
+}
 
 /***640px***/
 @include mobile-sm {
