--- a/frontend/src/pages/Page404.scss
+++ b/frontend/src/pages/Page404.scss
@@ -46,13 +46,13 @@
     font-size: 2rem;
     font-weight: bold;
     margin-bottom: 1.5rem;
-    color: #2c2c2c;
+    color: $color-title;
   }
 
   &__message {
     font-size: 1.1rem;
     line-height: 1.6;
-    color: #444;
+    color: black;
     margin-bottom: 2rem;
   }
 
@@ -61,7 +61,6 @@
     padding: 0.75rem 1.5rem;
     background-color: #5c6ac4;
     color: white;
-    text-decoration: none;
     border-radius: 0.5rem;
     transition: background-color 0.3s;
 
