--- a/frontend/src/pages/Profil.scss
+++ b/frontend/src/pages/Profil.scss
@@ -2,8 +2,6 @@
 @use "../styles/_variables" as *;
 
 .profile {
-  //  background: linear-gradient(to bottom, #f0f4f8 0%, #ffffff 100%);
-  color: #222;
 
   &__section {
     display: flex;
@@ -82,7 +80,7 @@
     bottom: -70px;
     left: 50%;
     transform: translateX(-50%);
-    background: #fff;
+    background: white;
     cursor: pointer;
     overflow: hidden;
     transition: transform 0.3s;
@@ -167,7 +165,7 @@
     border-radius: 0.5rem;
     font-size: 1rem;
     background-color: #fdfdfd;
-    color: #222;
+    color: $color-input;
     width: 100%;
 
     &:read-only {
