--- a/frontend/src/pages/Register.scss
+++ b/frontend/src/pages/Register.scss
@@ -2,40 +2,23 @@
 @use "../styles/_variables" as *;
 
 .register {
-  background: linear-gradient(135deg, #ff7e5f33, #feb47b33);
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 2rem;
 
   &__section {
-    // max-width: 480px;
     width: 100%;
-    // animation: fadeIn 1s ease forwards;
   }
 
   &__title {
-    // font-size: 2.2rem;
     font-weight: 800;
     text-align: center;
-    color: #333;
+    color: $color-title;
     margin-bottom: 1.5rem;
     position: relative;
     text-transform: uppercase;
-    // letter-spacing: 2px;
     white-space: nowrap;
-
-    // &::after {
-    //   content: "";
-    //   position: absolute;
-    //   bottom: -10px;
-    //   left: 50%;
-    //   transform: translateX(-50%);
-    //   width: 100%;
-    //   height: 4px;
-    //   background: linear-gradient(to right, #ff7e5f, #feb47b);
-    //   border-radius: 2px;
-    // }
   }
 
   &__form {
@@ -50,7 +33,7 @@
     background: rgba(255, 255, 255, 0.9);
     backdrop-filter: blur(8px);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    color: #333;
+    color: $color-fieldset;
     transition: transform 0.3s ease;
 
     &:hover {
@@ -63,7 +46,7 @@
     font-weight: 700;
     text-align: center;
     margin-bottom: 1.5rem;
-    color: #333;
+    color: $color-legend;
   }
 
   &__list {
@@ -82,17 +65,17 @@
     font-size: 1rem;
     font-weight: 600;
     margin-bottom: 0.3rem;
-    color: #555;
+    color: $color-label;
   }
 
   &__input {
-    font-size: 1.1rem;
+    font-size: 1rem;
     border-radius: 10px;
     padding: 0 15px;
     height: 3rem;
     border: 2px solid #ddd;
     background-color: #fff;
-    color: #333;
+    color: $color-input;
     transition: all 0.3s ease;
     width: 100%;
     &::placeholder {
@@ -101,7 +84,6 @@
 
     &:focus {
       border: 2px solid #ff7e5f;
-      outline: none;
       box-shadow: 0 0 8px rgba(255, 126, 95, 0.3);
     }
   }
@@ -147,17 +129,16 @@
         $shadow-orange
       );
     }
-  
+
     &--reset {
       @include button-base(
         $linear-gradient-purple,
         $linear-gradient-purple-hover,
         $shadow-purple
       );
-  
     }
   }
-  
+
   &__error {
     margin-top: 0.5rem;
     background-color: rgba(255, 0, 0, 0.08);
@@ -180,8 +161,6 @@
     transform: translateY(0);
   }
 }
-
-
 
 /***640px***/
 @include mobile-sm {
