--- a/frontend/src/component/user/RankingListUsers.scss
+++ b/frontend/src/component/user/RankingListUsers.scss
@@ -8,6 +8,9 @@
   flex-direction: column;
   gap: 1rem;
   width: 45rem;
+  padding: 25px;
+  background: #ffffffd6;
+  border-radius: 12px;
 }
 
 .ranking-list__item {
@@ -25,8 +28,6 @@
     transform: translateY(-2px);
   }
 }
-
-
 
 /***640px***/
 @include mobile-sm {
