--- a/frontend/src/component/user/RankingUserPreview.scss
+++ b/frontend/src/component/user/RankingUserPreview.scss
@@ -20,7 +20,7 @@
 }
 
 .ranking-user-card__index {
-  font-size: 2.2rem;
+  font-size: 3rem;
   font-weight: 900;
   width: 3rem;
   text-align: center;
@@ -65,20 +65,32 @@
 }
 
 .ranking-user-card__name {
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   font-weight: 700;
-  margin: 0;
   text-transform: capitalize;
+  letter-spacing: 0.01rem;
 }
 
-.ranking-user-card__elo, .ranking-user-card__score  {
-  font-size: 1.1rem;
+
+.ranking-user-card__elo{
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: black;
+  margin: 0.2rem 0 0;
+}
+
+.ranking-user-card__nb-games, .ranking-user-card__score  {
+  font-size: 1rem;
   font-weight: 500;
   color: #666;
   margin: 0.2rem 0 0;
 }
 
-// Optional animation
+.ranking-user-card__info-data {
+  display: flex;
+  gap: 0.6rem;
+}
+
 @keyframes popIn {
   from {
     transform: scale(0.8);
@@ -87,21 +99,6 @@
   to {
     transform: scale(1);
     opacity: 1;
-  }
-}
-
-/*** Responsive tweaks ***/
-@include mobile-md {
-  .ranking-user-card {
-    padding: 1rem;
-  }
-
-  .ranking-user-card__name {
-    font-size: 1.2rem;
-  }
-
-  .ranking-user-card__score {
-    font-size: 1rem;
   }
 }
 
