--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -3,7 +3,7 @@
 
 /* Chrome, Edge, Safari et Opera */
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -36,25 +36,11 @@ body,
 }
 
 body {
-  // background-image: url("/media/bg-homee.png");
-  // background-repeat: repeat;
-  // background-position: center;
-  // background-size: contain;
-  background: $linear-gradient-yellow;
+  background-image: url("/media/pattern-bg.webp");
+  background-repeat: repeat;
+  background-position: center;
+  background-size: contain;
   position: relative;
-  
-  // &::before {
-  //   content: "";
-  //   z-index: -1;
-  //   position: absolute;
-  //   inset: 0;
-  //   width: 100%;
-  //   height: 100vh;
-  //   background: rgba(245, 242, 242, 0.55);
-  //   border-radius: 1rem;
-  //   padding: 2.5rem 3rem;
-  //   box-shadow: 0 6px 24px rgba(0, 0, 0, 0.1);
-  // }
 }
 
 #root {
